install( DIRECTORY
    complex_hierarchy
    custom_pads_test
    ecc83
    electric
    flat_hierarchy
    interf_u
    kit-dev-coldfire-xilinx_5213
    microwave
    pic_programmer
    python_scripts_examples
    simulation
    "sonde xilinx"
    stickhub
    test_pads_inside_pads
    test_xil_95108
    video
    DESTINATION ${KICAD_DEMOS}
    COMPONENT resources
    )
