install( DIRECTORY
    complex_hierarchy
    custom_pads_test
    ecc83
    flat_hierarchy
    interf_u
    kit-dev-coldfire-xilinx_5213
    microwave
    multichannel
    pic_programmer
    python_scripts_examples
    royalblue54L_feather
    simulation
    "sonde xilinx"
    stickhub
    test_pads_inside_pads
    test_xil_95108
    tiny_tapeout
    video
    vme-wren
    DESTINATION ${KICAD_DEMOS}
    COMPONENT resources
    )
