install( DIRECTORY
    complex_hierarchy
    cm5_minima
    ecc83
    interf_u
    jetson-agx-thor-baseboard
    kit-dev-coldfire-xilinx_5213
    microwave
    multichannel
    openair-max
    pic_programmer
    python_scripts_examples
    royalblue54L_feather
    simulation
    "sonde xilinx"
    stickhub
    tiny_tapeout
    video
    vme-wren
    DESTINATION ${KICAD_DEMOS}
    COMPONENT resources
    )
