INSTALL(DIRECTORY de COMPONENT doc-de
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
INSTALL(DIRECTORY en COMPONENT doc-en
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
INSTALL(DIRECTORY es COMPONENT doc-es
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
INSTALL(DIRECTORY fr COMPONENT doc-fr
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
INSTALL(DIRECTORY hu COMPONENT doc-hu
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
INSTALL(DIRECTORY ru COMPONENT doc-ru
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
    
ADD_SUBDIRECTORY(help)

